<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="Default value"
        android:key="username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/username_summary"
        android:title="@string/username" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:inputType="textPassword"
        android:key="password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/password_summary"
        android:title="@string/textPassword" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="appRoot"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/appRoot_summary" />
</PreferenceScreen>