<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tweet"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="101"
        android:title="@string/tweet"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="101"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_purge"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="101"
        android:title="@string/purge" />

    <item
        android:id="@+id/itemPrefs"
        android:orderInCategory="103"
        android:title="@string/titlePrefs"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>